# fcmake

./: CMakeLists.txt
cmake/: add_documentation.cmake  add_library.cmake  compiler.cmake  compiler_clang.cmake  compiler_gcc.cmake  compiler_ms.cmake  config.cmake  dependency.cmake  find_android_ndk.cmake  find_ant.cmake  general.cmake  project_utils.cmake  status.cmake
src/: lib1.cpp  lib1.hpp  main.cpp
tests/: test_lib1.cpp
